[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/worlds/World1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/bgm.ogg" type="AudioStream" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.552941, 0.843137, 1, 1 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="World" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 256.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer"]
margin_left = 43.0
margin_top = 86.0
margin_right = 212.0
margin_bottom = 169.0
custom_constants/separation = 10

[node name="Start" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/StartMenu"]
margin_right = 169.0
margin_bottom = 23.0
text = "Start"

[node name="Bot" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/StartMenu"]
margin_top = 33.0
margin_right = 169.0
margin_bottom = 56.0
text = "Add Bot"

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/StartMenu"]
margin_top = 66.0
margin_right = 169.0
margin_bottom = 83.0
text = "Press 'Space' or 'A' to join"
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/StartMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/StartMenu/Bot" to="." method="_on_Bot_pressed"]
